--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -1,7 +1,15 @@
 //@import url() per importare un font
+
+@use './partials/variables' as *;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 @import 'bootstrap/scss/bootstrap';
 $fa-font-path: './webfonts';
 
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
 
+body{
+  font-family: 'Roboto','sans-serif';
+} 
